force-app/main/default/objects/Project_Member__c/fields/Expert__c.field-meta.xml
<CustomField>
    <fullName>Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expert</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project_Members</relationshipLabel>
    <relationshipName>Project_Members</relationshipName>
    <type>Lookup</type>
</CustomField>