force-app/main/default/objects/Project_Member__c/fields/Project_role__c.field-meta.xml
<CustomField>
    <fullName>Project_role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Role</label>
    <referenceTo>Project_role__c</referenceTo>
    <relationshipLabel>Project_Members</relationshipLabel>
    <relationshipName>Project_Members</relationshipName>
    <type>Lookup</type>
</CustomField>