force-app/main/default/objects/Project_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Expert__c</columns>
    <columns>Project__c</columns>
    <columns>Project_role__c</columns>
    <columns>Hourly_Rate__c</columns>
    <columns>Start_date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>